# dilution_solver

./: LICENSE  README.md  mypy.ini  pyproject.toml  temp.py  test.py
data/: EXP001_conc_design_updated.csv  EXP001_transfer_volumes.csv  experiment_design.csv  sample_ranges.csv  sample_volumes.csv  stocks.csv  stocks_design.csv  stocks_high.csv  targets.csv
docs/: Makefile  dilution_solver.html  index.html  search.js
docs/dilution_solver/: doe.html  routines.html  tests.html
docs/dilution_solver/doe/: doe.html
examples/: doe_example.py  example.py  pydoe_example.py  sequential_dilution.py
src/dilution_solver/: __init__.py  doe.py  routines.py  tests.py
src/dilution_solver/design/: __init__.py  design.py
src/dilution_solver/doe/: __init__.py  doe.py
src/dilution_solver/routines/: __init__.py  routines.py
